[package]
name = "rp2040_rust_org"
version = "0.1.0"
edition = "2021"
authors = ["tkp"]


[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.7", features=["unproven"]}
embedded-time = "0.12.1"

defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"]}
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch="main", features=["rt"] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch="main" }